--- a/src/components/groups/GroupHeader.module.css
+++ b/src/components/groups/GroupHeader.module.css
@@ -1,14 +1,35 @@
 .GroupHeader {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 100px;
   padding: 1rem;
   /* background-color: #00bfa5; */
   background-color: #2a2f32;
   color: #898e91;
 }
-
+.GroupHeader span {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+}
+.GroupHeader span div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 0.5rem;
+  color: white;
+  text-transform: capitalize;
+}
+.GroupHeader span div span:nth-child(2) {
+  color: greenyellow;
+}
 .GroupFlex {
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
+  justify-content: flex-end;
+  color: white;
+  font-weight: bold;
   align-items: center;
+  cursor: pointer;
+  font-size: 1.1rem;
 }
