--- a/src/components/groups/GroupRow.module.css
+++ b/src/components/groups/GroupRow.module.css
@@ -1,8 +1,8 @@
 .GroupRow {
   display: grid;
   width: 100%;
-  grid-template-columns: 60px 1fr 60px;
-  grid-template-columns: minmax(0, 60px) 1fr 60px;
+  grid-template-columns: 60px 1fr 70px;
+  grid-template-columns: minmax(0, 60px) 1fr 70px;
   grid-template-rows: 30px 30px;
   column-gap: 10px;
   text-decoration: none;
@@ -59,7 +59,15 @@
   padding: 1.29rem 0rem;
   align-self: center;
 }
-
+.GroupRowNo span:nth-child(1) {
+  color: yellowgreen;
+  text-transform: capitalize;
+  font-weight: bold;
+  font-size: 0.9rem;
+}
+.GroupRowNo span:nth-child(2) {
+  text-transform: capitalize;
+}
 .GroupRowArrow {
   justify-self: center;
   display: none;
