--- a/src/components/messages/SpeechBubble.module.css
+++ b/src/components/messages/SpeechBubble.module.css
@@ -57,7 +57,7 @@
   /* color: #888c8f; */
   font-size: 0.9rem;
   color: yellowgreen;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
   font-weight: bold;
 }
 
