--- a/src/components/auth/Auth.module.css
+++ b/src/components/auth/Auth.module.css
@@ -89,6 +89,16 @@
   background-color: white;
   margin-bottom: 1rem;
 }
+.Loader {
+  background-color: #131c21d2;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media (max-width: 600px) {
   .AuthForm {
     width: 90%;
