--- a/src/components/groups/Search.module.css
+++ b/src/components/groups/Search.module.css
@@ -25,6 +25,8 @@
   outline: none;
   border: none;
   color: white;
+  /* cursor: not-allowed; */
+  /* pointer-events: none; */
 }
 @media (max-width: 830px) {
   .SearchForm span:nth-child(3) {
