--- a/src/components/Layout/Layout.module.css
+++ b/src/components/Layout/Layout.module.css
@@ -15,7 +15,16 @@
   background-color: #131c21af;
   display: none;
 }
-
+.Loader {
+  background-color: #131c21d2;
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 @media (max-width: 700px) {
   .Layout {
     grid-template-columns: 1fr;
