--- a/src/components/groups/Search.module.css
+++ b/src/components/groups/Search.module.css
@@ -25,8 +25,7 @@
   outline: none;
   border: none;
   color: white;
-  /* cursor: not-allowed; */
-  /* pointer-events: none; */
+  font-size: 1rem;
 }
 @media (max-width: 830px) {
   .SearchForm span:nth-child(3) {
