--- a/src/components/messages/MessageHeader.module.css
+++ b/src/components/messages/MessageHeader.module.css
@@ -1,7 +1,7 @@
 .MessageHeader {
   background-color: #2a2f32;
   display: grid;
-  grid-template-columns: 40px 1fr 50px;
+  grid-template-columns: 40px 1fr 80px 50px;
   padding: 0.5rem 1rem;
   height: 64px;
   place-items: center;
@@ -11,7 +11,8 @@
   color: white;
   cursor: pointer;
 }
-.MessageHeader span:nth-child(3) {
+.MessageHeader span:nth-child(3),
+.MessageHeader span:nth-child(4) {
   cursor: pointer;
   font-size: 1.3rem;
 }
@@ -33,6 +34,7 @@
 }
 .GroupRowNo span:nth-child(2) {
   text-transform: capitalize;
+  color: #888c8f;
 }
 .GroupRowImg {
   width: 100%;
