--- a/src/components/messages/SpeechBubble.module.css
+++ b/src/components/messages/SpeechBubble.module.css
@@ -3,8 +3,9 @@
   width: 300px;
   margin: 10px 0;
   border-radius: 10px;
-  background: #056162;
+  /* background: #056162; */
   color: rgb(243, 236, 236);
+  /* color: #262d31; */
   padding: 20px;
   text-align: center;
   font-weight: 900;
@@ -17,8 +18,12 @@
 }
 .SpeechSent {
   align-self: flex-end;
+  cursor: pointer;
+  background-color: #056162;
+  /* background-color: #2c3738; */
   /* margin-left: 40px; */
 }
+
 .SpeechReceived:before {
   content: "";
   width: 0px;
@@ -50,6 +55,7 @@
   grid-template-rows: 20px 1fr;
   background-color: #056162;
 }
+
 .SpeechBubbleGrid span:nth-child(1) {
   grid-column: 1/-1;
   grid-row: 1/2;
@@ -74,6 +80,7 @@
   color: #888c8f;
   font-size: 0.7rem;
 }
+
 @media (max-width: 335px) {
   .SpeechReceived,
   .SpeechSent {
